fixes for templates and new navigation template
updated references to globals version.
added unique CT class to each css file

--- a/Container Templates/Image Layout/custom-imagelayout.css
+++ b/Container Templates/Image Layout/custom-imagelayout.css
@@ -1,6 +1,6 @@
-.content-template-imagelayout .content-template .select-thumb {width:400px; height:191px;}
+.container-template-newsevents .content-template .select-thumb {width:400px; height:130px;}
 
 /* add the thumbnails - if the sizes are different, change them here */
-.content-template-imagelayout .select-thumb.selected-full-width {background-image: url(/?a=7414); background-size: 400px 190px; width:400px; height: 191px;}
-.content-template-imagelayout .select-thumb.selected-fullwidth-mid {background-image: url(/?a=7415); background-size: 400px 191px;}
-.content-template-imagelayout .select-thumb.selected-fullwidth-bottom {background-image: url(/?a=7416); background-size: 400px 191px;}
+.container-template-newsevents .select-thumb.selected-block-listing {background-image: url(/?a=5670:v2); background-size: 400px 130px;}
+.container-template-newsevents .select-thumb.selected-news-listing {background-image: url(/?a=5672:v2); background-size: 360px 130px; width: 360px;}
+.container-template-newsevents .select-thumb.selected-news-listing-dense {background-image: url(/?a=5673:v2); background-size: 400px 130px;}
