--- a/Container Templates/Text Layout/custom-textlayout.css
+++ b/Container Templates/Text Layout/custom-textlayout.css
@@ -1,7 +1,7 @@
-.content-template .select-thumb {width:470px; height:167px;}
+.content-template-textlayout .content-template .select-thumb {width:470px; height:167px;}
 
 /* add the thumbnails - if the sizes are different, change them here */
-.select-thumb.selected-image-left {background-image: url(/?a=7375); background-size: 470px 167px;}
-.select-thumb.selected-image-right {background-image: url(/?a=7376); background-size: 470px 167px;}
-.select-thumb.selected-inset-left {background-image: url(/?a=7377); background-size: 470px 265px;}
-.select-thumb.selected-inset-right {background-image: url(/?a=7378); background-size: 470px 253px;}
+.content-template-textlayout .select-thumb.selected-image-left {background-image: url(/?a=7375); background-size: 470px 167px;}
+.content-template-textlayout .select-thumb.selected-image-right {background-image: url(/?a=7376); background-size: 470px 167px;}
+.content-template-textlayout .select-thumb.selected-inset-left {background-image: url(/?a=7377:v1); background-size: 372px 200px; width:372px; height: 200px;}
+.content-template-textlayout .select-thumb.selected-inset-right {background-image: url(/?a=7378:v1); background-size: 372px 200px; width:372px; height: 200px;}
